--- a/touchbase-react/src/components/YourTouchbases/MyTouchbase.css
+++ b/touchbase-react/src/components/YourTouchbases/MyTouchbase.css
@@ -45,7 +45,7 @@
   //box-shadow: 2px 2px 2px #abb0b8;
   font-family: "HelveticaNeue-Light", sans-serif;
   margin-right: .5vw;
-  width: 4vw;
+  width: 80px;
   margin-top: 2vh;
   margin-bottom: 1vh;
   border-radius: 10px;
@@ -61,7 +61,7 @@
   //box-shadow: 2px 2px 2px #abb0b8;
   font-family: "HelveticaNeue-Light", sans-serif;
   margin-right: .5vw;
-  width: 4vw;
+  width: 80px;
   margin-top: 2vh;
   margin-bottom: 1vh;
   border-radius: 10px;
