--- a/touchbase-react/src/components/Dashboard/Dashboard.css
+++ b/touchbase-react/src/components/Dashboard/Dashboard.css
@@ -1,16 +1,16 @@
 .dashboard-content {
-  height: 85vh;
-  //background-color: red;
+  height: auto;
 }
 
 .calendar {
-  width: auto;
-  height: 85vh;
+  //width: 100%;
+  //height: 100%;
   margin-left: 10%;
-  overflow: hidden;
+  //overflow: hidden;
   //background-color: yellow;
   position: relative;
   //margin-bottom: 1%;
+  padding-bottom: 200px;
 }
 
 .home-calendar {
@@ -25,6 +25,7 @@
   animation-name: slideInTop;
   animation-duration: 1s;
   animation-fill-mode: both;
+
 }
 
 .username {
@@ -70,4 +71,22 @@
   to {
     transform: translate3d(0, 0, 0);
   }
+}
+
+@media screen and (max-width: 1100px) {
+  .calendar {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .username {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    //background-color: yellow;
+    padding-left: 5%;
+  }
+
 }
