--- a/touchbase-react/src/components/Dashboard/EventBanner.css
+++ b/touchbase-react/src/components/Dashboard/EventBanner.css
@@ -1,4 +1,13 @@
 .tile-content-component {
+  font-size: 15px;
   background-color: #E8E9ED;
+  //background-color: red;
   line-height: 1.5;
+}
+
+@media screen and (max-width: 1100px) {
+  .tile-content-component {
+    font-size: 1.5vw;
+    padding: 0px;
+  }
 }
