--- a/touchbase-react/src/components/LandingPage/LandingPage.css
+++ b/touchbase-react/src/components/LandingPage/LandingPage.css
@@ -554,7 +554,7 @@
     //border-bottom: 2px solid black;
   }
 
-  .two .calendar {
+  .two .calendar-landing-page {
     width: 100%;
     height: 100%;
     min-width: 80px;
