--- a/touchbase-react/src/components/Meetings/MeetingsNew.css
+++ b/touchbase-react/src/components/Meetings/MeetingsNew.css
@@ -110,3 +110,35 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+@media screen and (max-width: 1100px) {
+
+  .ind-meeting-content-upcoming {
+    background-color: blue;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .meet-heading {
+    background-color: red;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .meet-links {
+    background-color: yellow;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .ind-meet-content {
+    background-color: green;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
